sumo/tests/dfrouter/errors/triple_minus3/output.dfrouter.exe
SUMO dfrouter
 (c) DLR/ZAIK 2000-2006; http://sumo.sourceforge.net
 Version 0.9.6
 Use --help to get the list of options.
